I fixed the ValidationComponent button issue where it should have been Else if after the IsImageButton.

--- a/Grid.razor
+++ b/Grid.razor
@@ -36,7 +36,7 @@
                 {
                     <ImageButton ClickHandler=@ButtonClickHandler Unit="@column.Unit" ImageUrl="@column.ButtonUrl" Width="@column.Width" Height="@column.Height" ButtonNumber=@column.ButtonNumber ButtonText="@column.ColumnText" Parent="this"></ImageButton>
                 }
-                if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
+                else if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
                 {
                     <div class="displayinline @column.ClassName">
                     <ValidationComponent Name=column.ColumnName Unit="@column.Unit" Width=column.Width 
