--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -31,13 +31,13 @@
 </Styled>
 <Styled @bind-Classname="ListItemStyle">    
     font-family: Verdana;
-    font-size: @TextSizeStyle;
     text-align: left;
     background-color: @ListBackgroundColorName;
     width: @WidthStyle;
     position: relative;
     color: @ListItemTextColorName;
-    left: @LabelMarginRightListStyle;
+    left: @ListItemWidthStyle;
+    font-size: @ListItemFontSizeStyle;
     z-index: @ZIndex;
 </Styled>
 <Styled @bind-Classname="NoPadding">    
