LeftStyle and ListItemWidth were both wrong.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -33,10 +33,10 @@
     font-family: Verdana;
     text-align: left;
     background-color: @ListBackgroundColorName;
-    width: @WidthStyle;
+    width: @ListItemWidthStyle;
     position: relative;
     color: @ListItemTextColorName;
-    left: @ListItemWidthStyle;
+    left: @LeftStyle;
     font-size: @TextSizeStyle;
     z-index: @ZIndex;
 </Styled>
