Checked in version 7.5.0.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -48,7 +48,7 @@
     margin: 0;
     padding: 0;
 </Styled>
-<Styled @bind-Classname="VerticalCenter">
+<Styled @bind-Classname="ButtonStyle">
     display: inline-block;
     justify-content: left;    
     width: 100%;
@@ -61,7 +61,7 @@
         <div class="@LabelStyle">@LabelText</div>
     }
     <div class="@ComboBoxStyle">
-        <div class="@VerticalCenter">
+        <div class="@ButtonStyle">
             <ImageButton ButtonNumber="1" ButtonText="@ButtonText" Height="4" Unit="@Unit" Width="@Width"
                     Name="ComboBoxButton" TextSize="@TextSize" Position="relative" Left="@ButtonLeft"
                     ButtonTextAlign="@TextAlign" TextColor="@ButtonTextColor" ImageUrl="@ButtonUrl" Parent="this">
