--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -3,34 +3,37 @@
 @using DataJuggler.Blazor.Components.Enumerations
 
 <Styled @bind-Classname="Grid">
-    display: inline-block;
+    display: block;
     height: 16px;
+    justify-content: left;
     min-width: @WidthStyle;
     width: @WidthStyle;
     font-size: @TextSizeStyle;
     position: @Position;
-    left: @LeftStyle;
-    top: @TopStyle;
-    z-index: @ZIndex;   
+    left: @LeftStyle;        
 </Styled>
 <Styled @bind-Classname="LabelStyle">
     display: inline-block;
     font-size: @TextSizeStyle;
     text-align: right;
+    background-color: @LabelBackColor;
     margin-right: @LabelMarginRightStyle !important;
     color: @LabelColorName;    
     white-space: nowrap;
     width: @LabelWidthStyle;
+    float: left;
+    z-index: @ZIndexMinusStyle;
 </Styled>
 <Styled @bind-Classname="ComboBoxStyle">    
     display: inline-block;
     height: @HeightStyle;
     width: @WidthStyle    
-    font-size: @TextSizeStyle;
-    place-content: start;
-    left: 0px;
-    overflow: hidden;
+    font-size: @TextSizeStyle;    
+    justify-content: left;
     text-align: center;   
+    float: left;    
+    z-index: @ZIndex;
+    background-color: @ComboBoxBackColor;
 </Styled>
 <Styled @bind-Classname="ListItemStyle">    
     font-family: Verdana;
@@ -51,11 +54,15 @@
 <Styled @bind-Classname="ButtonStyle">
     display: inline-block;
     justify-content: left;    
+    text-align: center;
     width: 100%;
+    position: relative;    
+    left: 0px;
+    top: 0px;
 </Styled>
 
  
-<div class="@Grid">
+<div class="@Grid">    
     @if (ShowLabel)
     {
         <div class="@LabelStyle">@LabelText</div>
@@ -63,7 +70,8 @@
     <div class="@ComboBoxStyle">
         <div class="@ButtonStyle">
             <ImageButton ButtonNumber="1" ButtonText="@ButtonText" Height="4" Unit="@Unit" Width="@Width"
-                    Name="ComboBoxButton" TextSize="@TextSize" Position="relative" Left="@ButtonLeft"
+                    Name="ComboBoxButton" TextSize="@TextSize" Position="relative" Left="@ButtonLeft" Top=@ButtonTop
+                    ZIndex="ZIndexPlus"
                     ButtonTextAlign="@TextAlign" TextColor="@ButtonTextColor" ImageUrl="@ButtonUrl" Parent="this">
             </ImageButton>
         </div>
@@ -78,5 +86,5 @@
             </select>
         </div>
         }
-    </div>
+    </div>    
 </div>
