--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -36,6 +36,10 @@
     {
         outline: none;
         border: none;
+        position: relative;
+        top: 0px;
+        left: 0px;
+        z-index: @ZIndex;
     }
     .imagebutton:focus
     {
