Checking in version 7.6.2

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -65,7 +65,7 @@
 <div class="@Grid">    
     @if (ShowLabel)
     {
-        <div class="@LabelStyle">@LabelText</div>
+        <div class="@LabelStyle"><span class="@LabelClassName">@LabelText</span></div>
     }
     <div class="@ComboBoxStyle">
         <div class="@ButtonStyle">
