I added LabelLeft and LabelTop properties to the ComboBox.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -23,6 +23,9 @@
     width: @LabelWidthStyle;
     float: left;
     z-index: @ZIndexMinusStyle;
+    position: relative;
+    left: @LabelLeft;
+    top: @LabelTop;
 </Styled>
 <Styled @bind-Classname="ComboBoxStyle">    
     display: inline-block;
