Checking in version 7.6.4 which now uses LabelLeftStyle and LabelTopStyle and LabelUnit for the ComboBox control.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -24,8 +24,8 @@
     float: left;
     z-index: @ZIndexMinusStyle;
     position: relative;
-    left: @LabelLeft;
-    top: @LabelTop;
+    left: @LabelLeftStyle;
+    top: @LabelTopStyle;
 </Styled>
 <Styled @bind-Classname="ComboBoxStyle">    
     display: inline-block;
