Checking in version 7.7.3

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -9,6 +9,8 @@
     font-size: @LabelFontSizeStyle;
     text-align: right;
     width: @Column1WidthStyle;
+    position: relative;
+    top: @LabelTopStyle;
 </Styled>
 <Styled @bind-Classname="@Column2">
     float: left;
