I fixed the checkbox wasn't binding, due to an error caused by something between my keyboard and my chair.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -90,7 +90,7 @@
                     <div class="@CheckBoxClassName">
                         @if (Enabled)
                         {
-                            <input class="@CheckBoxStyle" type=@InputType checked="@CheckBoxValue" />
+                            <input class="@CheckBoxStyle" @bind="@CheckBoxValue" type=@InputType checked="@CheckBoxValue" />
                         }
                         else
                         {
