--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -1,13 +1,45 @@
-﻿
+﻿@using DataJuggler.Blazor.Components
+@using BlazorStyled
 
-@if (Visible)
-{
-    if (HasItems)
+<Styled @bind-Classname="CheckedListBoxStyle">
+    display: @DisplayStyle;
+    height: @HeightStyle;
+    justify-content: left;
+    min-width: @WidthStyle;
+    width: @WidthStyle;
+    height: @HeightStyle;
+    font-size: @TextSizeStyle;
+    position: @Position;
+    left: @LeftStyle;
+    Top: @TopStyle;
+</Styled>
+<Styled @bind-Classname="ListItemStyle">
+    font-family: Verdana;
+    text-align: left;
+    background-color: @ListBackgroundColorName;
+    width: @ListItemWidthStyle;
+    height: @HeightStyle;
+    position: @listItemPosition;
+    color: @ListItemTextColorName;
+    left: @ListItemLeftStyle;
+    top: @ListItemTopStyle;
+    font-size: @TextSizeStyle;
+    z-index: @ZIndex;
+</Styled>
+
+<div class="@CheckedListBoxStyle">
+    @if (HasItems)
     {
-        // iterate the items
-        foreach (Item item in Items)
-        {
-            <input type="checkbox" @bind=item.ItemChecked />
-        }
+        <div class="@ListItemStyle">            
+            @foreach (Item item in Items)
+            {
+                <ValidationComponent CheckBoxMode=true Parent="this" Name="@item.Name" Unit="@Unit"
+                    Column1Width="@Width" Column2Width="@Width" CheckBoxValue = "@item.ItemChecked"
+                    HeightUnit="@HeightUnit" CheckBoxXPosition="@CheckBoxXPosition" Width="@Width"
+                    Height="@ListItemHeight" CheckBoxYPosition="@CheckBoxYPosition"
+                    Text="@item.Text" ExternalId="@item.Id">
+                </ValidationComponent>
+            }
+        </div>
     }
-}
+</div>
