I broke the ComboBox when I added HeightUnit to the ImageButton.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -75,7 +75,7 @@
     }
     <div class="@ComboBoxStyle">
         <div class="@ButtonStyle">
-            <ImageButton ButtonNumber="1" ButtonText="@ButtonText" Height="4" Unit="@Unit" Width="@Width"
+            <ImageButton ButtonNumber="1" ButtonText="@ButtonText" HeightUnit="vh" Height="4" Unit="@Unit" Width="@Width"
                 Name="ComboBoxButton" TextSize="@TextSize" Position="relative" Left="@ButtonLeft" Top=@ButtonTop
                 ZIndex="ZIndexPlus" ButtonTextAlign="@TextAlign" TextColor="@ButtonTextColor" 
                 ImageUrl="@ButtonUrl" Parent="this">
