--- a/Grid.razor
+++ b/Grid.razor
@@ -2,6 +2,19 @@
 @using DataJuggler.UltimateHelper
 @using DataJuggler.Excelerate;
 @using DataJuggler.Blazor.Components
+@using BlazorStyled
+
+<Styled @bind-Classname="@GridStyle">
+    background-color: @GridBackColor;
+    height: @HeightStyle;
+    line-height: 2vh;
+    font-size: @FontSizeStyle;
+    width: @WidthStyle;
+    overflow: hidden;
+    position: @Position;
+    left: @LeftStyle;
+    top: @TopStyle;
+</Styled>
 
 @if (ShowHeader)
 {
@@ -10,54 +23,55 @@
     </div>
 }
 
-@if ((ShowColumnHeaders) && (HasColumns))
-{
-    // iterate each column
-    foreach (Column column in Columns)
-    {
-        <div class="@column.ClassName">@column.ColumnName</div>
-    }
-}
+<div class="@ClassName @GridStyle">
+    
 
-<div class="@ClassName">
-@if (HasRows)
-{  
-
-    @foreach (Row row in Rows)
+    @if ((ShowColumnHeaders) && (HasColumns))
     {
-        // if the row has columns
-        if (row.HasColumns)
+        // iterate each column
+        foreach (Column column in Columns)
         {
-            <div class="@row.ClassName">
-
-            @foreach (Column column in row.Columns)
-            {
-                if (column.IsImageButton)
-                {
-                    <ImageButton ClickHandler=@ButtonClickHandler Unit="@column.Unit" ImageUrl="@column.ButtonUrl" 
-                    Width="@column.Width" Height="@column.Height" ButtonNumber=@column.ButtonNumber Name="Button"
-                    ButtonText="@column.ColumnText" Visible=true Parent="this"></ImageButton>
-                }
-                else if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
-                {
-                    <div class="displayinline @column.ClassName">
-                    <ValidationComponent Name=column.ColumnName Unit="@column.Unit" Width=column.Width 
-                        Height=column.Height RowId=row.Id ColumnId=column.Id ZIndex="@column.ZIndex"
-                        SetFocusOnFirstRender=column.SetFocusOnFirstRender ClassName="@column.EditorClassName"
-                        Text="@column.EditorText"  Parent=this></ValidationComponent>
-                    </div>
-                }
-                else
-                {
-                    <div class="down0 @column.ClassName" @ondblclick="() => OnDoubleClick(row, column.ColumnNumber)">@column.ColumnText</div>
-                }
-            }
-            </div>
-
-            <br />
+            <div class="@column.ClassName">@column.Caption</div>
         }
-    }    
-}
+    }
+    @if (HasRows)
+    {  
+
+        @foreach (Row row in Rows)
+        {
+            // if the row has columns
+            if (row.HasColumns)
+            {
+                <div class="@row.ClassName">
+
+                @foreach (Column column in row.Columns)
+                {
+                    if (column.IsImageButton)
+                    {
+                        <ImageButton ClickHandler=@ButtonClickHandler Unit="@column.Unit" ImageUrl="@column.ButtonUrl" 
+                        Width="@column.Width" Height="@column.Height" ButtonNumber=@column.ButtonNumber Name="Button"
+                        ButtonText="@column.ColumnText" Visible=true Parent="this"></ImageButton>
+                    }
+                    else if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
+                    {
+                        <div class="displayinline @column.ClassName">
+                        <ValidationComponent Name=column.ColumnName Unit="@column.Unit" Width=column.Width 
+                            Height=column.Height RowId=row.Id ColumnId=column.Id ZIndex="@column.ZIndex"
+                            SetFocusOnFirstRender=column.SetFocusOnFirstRender ClassName="@column.EditorClassName"
+                            Text="@column.EditorText"  Parent=this></ValidationComponent>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="down0 @column.ClassName" @ondblclick="() => OnDoubleClick(row, column.ColumnNumber)">@column.ColumnText</div>
+                    }
+                }
+                </div>
+
+                <br />
+            }
+        }    
+    }
 </div>
 
 
