I added CSS attribute !important to the ZIndex property of the ComboBox ListItemStyle

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -52,7 +52,7 @@
     left: @ListItemLeftStyle;
     top: @ListItemTopStyle;
     font-size: @TextSizeStyle;
-    z-index: @ZIndex;    
+    z-index: @ZIndex !important;    
 </Styled>
 <Styled @bind-Classname="NoPadding">    
     margin: 0;
