I added a ListItemHeightStyle and when Parameter property ListItemHeight is set I set the ListItemHeightStyle value to ListItemHeight + HeightUnit.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -46,7 +46,7 @@
     text-align: left;
     background-color: @ListBackgroundColorName;
     width: @ListItemWidthStyle;
-    height: @HeightStyle;
+    height: @listItemHeightStyle;
     position: @listItemPosition;
     color: @ListItemTextColorName;
     left: @ListItemLeftStyle;
