Added CheckedListHeight to the ComboBox

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -86,8 +86,8 @@
             @if (CheckListMode)
             {
                 <div class="@ListItemStyle">
-                    <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@Height" 
-                        Width="@ListItemWidth" ListItemHeight="@ListItemHeight"></CheckedListBox>                
+                    <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
+                        ListBackgroundColor="@ListBackgroundColor" ListItemHeight="@ListItemHeight"></CheckedListBox>                
                 </div>
             }
             else
