Checkiing in with ComboBox and CheckedListBox changes for ListItemTop.

--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -36,7 +36,7 @@
                 <ValidationComponent CheckBoxMode=true Parent="this" Name="@item.Name" Unit="@Unit"
                     Column1Width="@Width" Column2Width="@Width" CheckBoxValue = "@item.ItemChecked"
                     HeightUnit="@HeightUnit" CheckBoxXPosition="@CheckBoxXPosition" Width="@Width"
-                    Height="@ListItemHeight" CheckBoxYPosition="@CheckBoxYPosition"
+                    Height="@ListItemHeight" CheckBoxYPosition="@CheckBoxYPosition" Top="0"
                     Text="@item.Text" ExternalId="@item.Id">
                 </ValidationComponent>
             }
