--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -87,6 +87,7 @@
             {
                 <div class="@ListItemStyle">
                     <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
+                        ListItemTop="@ListItemTop"
                         ListBackgroundColor="@ListBackgroundColor" ListItemHeight="@ListItemHeight"></CheckedListBox>                
                 </div>
             }
