I fixed a bug with the CheckedListBox where the ListItemHeight was set to the wrong property.

--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -18,7 +18,7 @@
     text-align: left;
     background-color: @ListBackgroundColorName;
     width: @ListItemWidthStyle;
-    height: @HeightStyle;
+    height: @ListItemHeightStyle;
     position: @listItemPosition;
     color: @ListItemTextColorName;
     left: @ListItemLeftStyle;
