Checked the CheckedListBox ListItemStyle of the ComboBox

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -46,7 +46,7 @@
     text-align: left;
     background-color: @ListBackgroundColorName;
     width: @ListItemWidthStyle;
-    height: @listItemHeightStyle;
+    height: @CheckedListheight;
     position: @listItemPosition;
     color: @ListItemTextColorName;
     left: @ListItemLeftStyle;
@@ -87,8 +87,8 @@
             {
                 <div class="@ListItemStyle">
                     <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
-                        ListItemTop="@ListItemTop"
-                        ListBackgroundColor="@ListBackgroundColor" ListItemHeight="@ListItemHeight"></CheckedListBox>                
+                        ListItemTop="@ListItemTop" ListBackgroundColor="@ListBackgroundColor" 
+                        ListItemHeight="@ListItemHeight"></CheckedListBox>                
                 </div>
             }
             else
