Still trying to fix the height of the checked list box.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -38,7 +38,9 @@
     background-color: @TextBoxBackColor;
     position: @Position;
     left: @CheckBoxXStyle;
-    top: @CheckBoxYStyle;    
+    top: @CheckBoxYStyle;
+    height: @HeightStyle;
+    max-height: @HeightStyle;
 </Styled>
 <Styled @bind-Classname="@ImageStyle">
     background-image: url('@ImageUrl');
