Still working on the CheckedListBox.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -39,8 +39,7 @@
     position: @Position;
     left: @CheckBoxXStyle;
     top: @CheckBoxYStyle;
-    height: @HeightStyle;
-    max-height: @HeightStyle;
+    clear: both;
 </Styled>
 <Styled @bind-Classname="@ImageStyle">
     background-image: url('@ImageUrl');
