Still working on the CheckedListBoxComponent

--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -37,7 +37,7 @@
                     Column1Width="@Width" Column2Width="@Width" CheckBoxValue = "@item.ItemChecked"
                     HeightUnit="@HeightUnit" CheckBoxXPosition="@CheckBoxXPosition" Width="@Width"
                     Height="@ListItemHeight" CheckBoxYPosition="@CheckBoxYPosition" Top="0"
-                    Text="@item.Text" ExternalId="@item.Id">
+                    Text="@item.Text" ExternalId="@item.Id" BackgroundColor="@ListItemBackgroundColor.Name">
                 </ValidationComponent>
             }
         </div>
