Still working on the CheckedListBox for the ComboBox

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -87,7 +87,7 @@
             {
                 <div class="@ListItemStyle">
                     <CheckedListBox Parent="this" HeightUnit="@HeightUnit" Height="@checkedListheight" Width="@ListItemWidth"
-                        ListItemTop="@ListItemTop" ListBackgroundColor="@ListBackgroundColor" 
+                        ListItemTop="@ListItemTop" ListBackgroundColor="@ListBackgroundColor" ListItemBackgroundColor="@ListItemBackgroundColor"
                         ListItemHeight="@ListItemHeight"></CheckedListBox>                
                 </div>
             }
